Issue #1: Spacing fixed for publisher and edits for button

--- a/src/styles/ListModal.scss
+++ b/src/styles/ListModal.scss
@@ -154,17 +154,17 @@ $color-3: rgb(168, 50, 121);
   text-align: center;
   font-size: 2.5vw;
   margin-top: 2vh;
-  margin-bottom: 2vh;
-  color: teal;
+  margin-bottom: -2vh;
+  color: #20B2AA;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .btn-read {
-  font-size: 1.3vmin;
+  font-size: 1.5vmin;
   background-color: #a83279;
   color: white;
   border: none;
-  padding: .7vw;
+  padding: .5vw;
   text-align: center;
   text-decoration: none;
   // display: inline-block;
